--- a/src/views/home/index.njk
+++ b/src/views/home/index.njk
@@ -1,7 +1,7 @@
 {% extends "layout.njk" %}
 
 {% block head %}
-    <title>Loja Maramba</title>
+    <title>Encanto Variedades</title>
     <link rel="stylesheet" href="/home.css"/>
 {% endblock %}    
 
