--- a/src/views/layout.njk
+++ b/src/views/layout.njk
@@ -14,7 +14,7 @@
     <body>
         <nav class="navbar navbar-dark bg-primary" id="navbartop">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">Encanto Variedadesl</a>
+                <a class="navbar-brand" href="/">Encanto Variedades</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -23,11 +23,11 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/productslist">Cadastro de Produtos</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/sales">Vendas</a>
+                     <li class="nav-item">
+                        <a class="nav-link" href="/sales">Realizar Venda</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/sales">Realizar Venda</a>
+                        <a class="nav-link" href="/sales">Vendas</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/entrancesandexits">Entrada e Saída</a>
@@ -54,13 +54,15 @@
                     <li>
                         <a href="/productslist"><i class="bi bi-bag-plus"></i>Cadastro de Produtos</a>
                     </li>
+
+                    <li>
+                        <a href="/cart"><i class="bi bi-cart-plus"></i>Realizar Vendas</a>
+                    </li>
                     
                     <li>
                         <a href="/sales"><i class="bi bi-bag-check"></i>Vendas</a>
                     </li>
-                     <li>
-                        <a href="/cart"><i class="bi bi-cart-plus"></i>Realizar Vendas</a>
-                    </li>
+
                     <li>
                         <a href="/entrancesandexits"><i class="bi bi-bar-chart-line "></i>Entrada e Saída</a>
                     </li>
