--- a/src/views/cart/list.njk
+++ b/src/views/cart/list.njk
@@ -8,11 +8,17 @@
     {% block content %}
         <div class="content">
             <h1>Frente de Caixa</h1>
-            <form action="/cart" method="post" class="search">
-                <input class="form-control" type="text" placeholder="Código do produto" name="searchBarcode" value="{{searchBarcode}}" autofocus/>
-                <input class="form-control" type="text" placeholder="Nome do produto" name="nome" />
-                <button type="submit" class="btn btn-primary">Pesquisar</button>
-            </form>
+            
+            <div class="search">
+                <form action="/cart/add-one-barcode" method="post" class="barcode">
+                    <input class="form-control" type="text" placeholder="Código do produto" name="searchBarcode" value="{{searchBarcode}}" autofocus/>
+                </form>
+
+                <form action="/cart" method="post" >
+                    <input class="form-control" type="text" placeholder="Nome do produto" name="nome" />
+                    <button type="submit" class="btn btn-primary">Pesquisar</button>
+                </form>
+            </div>
 
             <table class="table table-striped table-hover">
                 <tr>
