Renomeia tilulo de carrinho

--- a/src/views/cart/list.njk
+++ b/src/views/cart/list.njk
@@ -7,7 +7,7 @@
 
     {% block content %}
         <div class="content">
-            <h3>Frente de Caixa</h3>
+            <h3>Caixa</h3>
             
             <div class="search">
                 <form action="/cart/add-one-barcode" method="post" class="barcode">
