--- a/src/views/product/list.njk
+++ b/src/views/product/list.njk
@@ -10,7 +10,18 @@
 
         <form class="form-product" action="/products" method="post" onSubmit="registerProduct(event)">
             <div class="row">
-                <p class="message-error">{{message}}</p>
+                {% if message %}
+                    <div class="alert alert-danger" role="alert">
+                        {{message}}
+                    </div>
+                {% endif %}
+
+                {% if sucesso %}
+                    <div class="alert alert-success" role="alert">
+                        {{sucesso}}
+                    </div>
+                {% endif %}
+               
                 <div class="col-md-3">
                     <label class="form-label">Código do produto</label>
                     <input class="form-control" type="text" name="barcode" placeholder="Código do produto" value="{{barcode}}"/>
