Adciona campo de desconto

--- a/src/views/cart/list.njk
+++ b/src/views/cart/list.njk
@@ -90,9 +90,9 @@
                 
                     <form  action="/sales" method="POST">
 
-                        {# <div class="descount">
+                        <div class="descount">
                             <input type="text" placeholder="Desconto" name="descount"/>
-                        </div> #}
+                        </div>
 
                         <div class="finish">
                         <button class="btn btn-success"> Finalizar Venda </button>
