Remove placeholder desconto

--- a/src/views/cart/list.njk
+++ b/src/views/cart/list.njk
@@ -91,7 +91,7 @@
                     <form  action="/sales" method="POST">
 
                         <div class="descount">
-                            <input type="text" placeholder="Desconto" name="descount"/>
+                            <input type="text" placeholder="" name="descount"/>
                         </div>
 
                         <div class="finish">
