Remove margin top de content sale show

--- a/public/saleshow.css
+++ b/public/saleshow.css
@@ -21,7 +21,7 @@ p {
 .content {
     /* width: 100px; */
     height: 200px !important;
-    margin-top: -20px;
+    /* margin-top: -20px; */
     margin-bottom: 20px;
 }
 
