Adiciona listagem por tipo de usuario

--- a/src/views/sale/list.njk
+++ b/src/views/sale/list.njk
@@ -12,10 +12,13 @@
             <div class="col-md-6">
                 <h4>Vendas</h4>
             </div>
-            <div class="col-md-6 box-balance">
-                <strong class="sales">Vendas: {{ sales.length }} </strong>
-                <strong class="balance">Total: {{ total }}</strong>
-            </div>
+           
+            {% if userLoggedType == "ADMIN" %}
+                <div class="col-md-6 box-balance">
+                    <strong class="sales">Vendas: {{ sales.length }} </strong>
+                    <strong class="balance">Total: {{ total }}</strong>
+                </div>
+            {% endif %}
         </div>
 
         <form class="search" action="/salesdates" method="post">
