--- a/src/views/user/register.njk
+++ b/src/views/user/register.njk
@@ -10,6 +10,7 @@
         <form action="/users" method="post">
             <input type="text" name="name" placeholder="Informe deu nome"/>
             <input type="email" name="email" placeholder="Informe deu E-mail"/>
+            <input type="text" name="type" placeholder="Informe o tipo de Usuário"/>
             <input type="password" name="password" placeholder="Informe sua senha"/>
 
             <button type="submit">Cadastrar</button>
