Adicionar detalhes de produtos variandos na impressao da nota

--- a/src/views/cart/list.njk
+++ b/src/views/cart/list.njk
@@ -149,6 +149,7 @@
 
 {# id produto variado producao 61d99adc1b51350e9cf7db67 #}
 
+{# id produto variado desenvolvimento 61c1d87c33c9650bc10e2bb6 #}
 
        
 
