--- a/public/saleshow.css
+++ b/public/saleshow.css
@@ -1,107 +1,106 @@
-@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
+@import 'https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700';
 
 * {
   padding: 0;
   border: 0;
   margin: 0;
   font-size: 12px;
-
 }
 
 body {
-  font-family: "Poppins", sans-serif !important;
+  font-family: 'Poppins', sans-serif !important;
   background: #fafafa !important;
 }
 
 p {
-  font-family: "Poppins", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 
-
 .content {
-    /* width: 100px; */
-    height: 200px !important;
-    /* margin-top: -20px; */
-    margin-bottom: 20px;
+  /* width: 100px; */
+  height: 200px !important;
+  /* margin-top: -20px; */
+  margin-bottom: 20px;
 }
 
 form.search {
-    margin-bottom: 20px;
-   
+  margin-bottom: 20px;
 }
 
 strong {
-    font-size: 15px;
-    font-weight: bold;
-    text-align: center;
+  font-size: 15px;
+  font-weight: bold;
+  text-align: center;
 }
 
 .box-sale {
-    border-radius: 10px;
-    background: #EAEEF1;
-    padding-left: 30px;
-    padding-right: 30px;
-    padding-bottom: 15px;
-    padding-top: 15px;
-    margin-top: 30px;
-    margin-left: 5px;
-    margin-right: 5px;
-    margin-bottom: 10px;
+  border-radius: 10px;
+  background: #eaeef1;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-bottom: 15px;
+  padding-top: 15px;
+  margin-top: 30px;
+  margin-left: 5px;
+  margin-right: 5px;
+  margin-bottom: 10px;
 }
 
-
+.productsVaried {
+  display: flex;
+  justify-content: column;
+  text-decoration: underline;
+}
 
 div.data-product {
-    display: flex;
-    flex-direction: column;
-    border-radius: 10px;
-    background: #fff;
-    padding: 15px;
-    margin-top: 15px
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  background: #fff;
+  padding: 15px;
+  margin-top: 15px;
 }
 
 .header {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .total strong {
-    background: #3BB5B4;
-    color: #174746;
-    padding: 5px;
-    border-radius: 5px;
+  background: #3bb5b4;
+  color: #174746;
+  padding: 5px;
+  border-radius: 5px;
 }
 
-
 strong.balance {
-    padding: 10px;
-    background: #3BB5B4;
-    color: #174746;
-    border-radius: 10px;
-  
+  padding: 10px;
+  background: #3bb5b4;
+  color: #174746;
+  border-radius: 10px;
 }
 
 strong.sales {
-    border-radius: 10px;
-    padding: 10px;
-    background: #FFC447;
-    color: #634C1C;
-    margin-right: 10px;
+  border-radius: 10px;
+  padding: 10px;
+  background: #ffc447;
+  color: #634c1c;
+  margin-right: 10px;
 }
 
 a {
-    margin-top: 20px;
+  margin-top: 20px;
 }
 
 div.box-balance {
-    margin-bottom: 30px;
-    margin-top: 15px;
+  margin-bottom: 30px;
+  margin-top: 15px;
 }
 
 button.button-delete {
-    margin-top: 10px;
+  margin-top: 10px;
 }
 
 .box-descount {
-    margin-top: 5px;
+  margin-top: 5px;
 }
