--- a/src/views/layout.njk
+++ b/src/views/layout.njk
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         {% block head %}
-            <title>Encanto Variedades</title>
+            <title>Azul Nautica</title>
         {% endblock %} 
         <link rel="stylesheet" href="/styles.css"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -14,7 +14,7 @@
     <body>
         <nav class="navbar navbar-dark bg-primary" id="navbartop">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">Encanto Variedades</a>
+                <a class="navbar-brand" href="/">Azul Nautica</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -45,7 +45,7 @@
             <nav id="sidebar">
 
                 <div class="sidebar-header">
-                    <h4><a href="/">Encanto Variedades</a></h4>
+                    <h4><a href="/">Azul Nautica</a></h4>
                 </div>
 
                 <ul class="list-unstyled components">
