--- a/src/views/layout.njk
+++ b/src/views/layout.njk
@@ -32,6 +32,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/entrancesandexits">Entrada e Saída</a>
                     </li>
+                    
                     <li class="nav-item">
                         <form class="form-logout nav-link" action="/logout" method="post">
                             <button class="btn-exit "><i class="bi bi-power"></i>Sair</button>
@@ -65,6 +66,10 @@
 
                     <li>
                         <a href="/entrancesandexits"><i class="bi bi-bar-chart-line "></i>Entrada e Saída</a>
+                    </li>
+
+                      <li>
+                        <a href="/sellerslist"><i class="bi bi-file-person"></i></i>Vendedor</a>
                     </li>
                 </ul>
 
