--- a/src/views/sale/show.njk
+++ b/src/views/sale/show.njk
@@ -55,6 +55,8 @@
                 <p>___________________________________________</p>
                 <strong>Total: {{total}}</strong>
                 <p>Venda de balcão</p>
+                <p>Vendedor: {{sale.seller.name}} </p>
+
                 <p style=" font-weight: bold">Confira seu troco</p>
                 <br/>
             </div>
