--- a/src/views/seller/list.njk
+++ b/src/views/seller/list.njk
@@ -23,8 +23,8 @@
                 {% endif %}
                
                 <div class="col-md-12">
-                    <label class="form-label">Nome do produto *</label>
-                    <input class="form-control" type="text" name="name" placeholder="Nome do produto" value="{{name}}"/>
+                    <label class="form-label">Nome do vendedor *</label>
+                    <input class="form-control" type="text" name="name" placeholder="Nome do vendedor" value="{{name}}"/>
                 </div>
 
                 <div class="col-md-3">
